--- a/style.css
+++ b/style.css
@@ -81,6 +81,14 @@ input.form-control:focus {
     margin-right: 2px;
 }
 
+.fraction .fraction-line {
+    border-top: 1px solid #000;
+    display: block;
+    width: 100%;
+    margin-top: 2px;
+    margin-bottom: 2px;
+}
+
 .numerator {
     display: block;
     font-size: 12px;
